src/fitpack_polar_domains_c.f90


    !> Raw view of component 'x': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_polar_c_getcomp_x(this, ptr, extents) &
        bind(C, name='fitpack_polar_c_getcomp_x')
        type(fitpack_polar_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_polar), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%x)) then
                extents = int(shape(fthis%x), kind=c_int64_t)
                if (size(fthis%x) > 0) ptr = c_loc(fthis%x)
            end if
        end if
    end subroutine fitpack_polar_c_getcomp_x

    !> Raw view of component 'y': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_polar_c_getcomp_y(this, ptr, extents) &
        bind(C, name='fitpack_polar_c_getcomp_y')
        type(fitpack_polar_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_polar), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%y)) then
                extents = int(shape(fthis%y), kind=c_int64_t)
                if (size(fthis%y) > 0) ptr = c_loc(fthis%y)
            end if
        end if
    end subroutine fitpack_polar_c_getcomp_y

    !> Raw view of component 'z': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_polar_c_getcomp_z(this, ptr, extents) &
        bind(C, name='fitpack_polar_c_getcomp_z')
        type(fitpack_polar_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_polar), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%z)) then
                extents = int(shape(fthis%z), kind=c_int64_t)
                if (size(fthis%z) > 0) ptr = c_loc(fthis%z)
            end if
        end if
    end subroutine fitpack_polar_c_getcomp_z

    !> Raw view of component 'u': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_polar_c_getcomp_u(this, ptr, extents) &
        bind(C, name='fitpack_polar_c_getcomp_u')
        type(fitpack_polar_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_polar), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%u)) then
                extents = int(shape(fthis%u), kind=c_int64_t)
                if (size(fthis%u) > 0) ptr = c_loc(fthis%u)
            end if
        end if
    end subroutine fitpack_polar_c_getcomp_u

    !> Raw view of component 'v': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_polar_c_getcomp_v(this, ptr, extents) &
        bind(C, name='fitpack_polar_c_getcomp_v')
        type(fitpack_polar_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_polar), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%v)) then
                extents = int(shape(fthis%v), kind=c_int64_t)
                if (size(fthis%v) > 0) ptr = c_loc(fthis%v)
            end if
        end if
    end subroutine fitpack_polar_c_getcomp_v

    !> Raw view of component 'w': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_polar_c_getcomp_w(this, ptr, extents) &
        bind(C, name='fitpack_polar_c_getcomp_w')
        type(fitpack_polar_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_polar), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%w)) then
                extents = int(shape(fthis%w), kind=c_int64_t)
                if (size(fthis%w) > 0) ptr = c_loc(fthis%w)
            end if
        end if
    end subroutine fitpack_polar_c_getcomp_w

    !> Raw view of component 'wrk2': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_polar_c_getcomp_wrk2(this, ptr, extents) &
        bind(C, name='fitpack_polar_c_getcomp_wrk2')
        type(fitpack_polar_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_polar), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%wrk2)) then
                extents = int(shape(fthis%wrk2), kind=c_int64_t)
                if (size(fthis%wrk2) > 0) ptr = c_loc(fthis%wrk2)
            end if
        end if
    end subroutine fitpack_polar_c_getcomp_wrk2

    !> Raw view of component 't': address of the first element, plus
    !> the component's 2 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_polar_c_getcomp_t(this, ptr, extents) &
        bind(C, name='fitpack_polar_c_getcomp_t')
        type(fitpack_polar_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(2)
        type(fitpack_polar), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%t)) then
                extents = int(shape(fthis%t), kind=c_int64_t)
                if (size(fthis%t) > 0) ptr = c_loc(fthis%t)
            end if
        end if
    end subroutine fitpack_polar_c_getcomp_t

    ! ===========================================================================================
    ! SECTION 9: Scalar Property Accessors
    ! ===========================================================================================

    !> Get pointer to scalar property 'm'
    type(c_ptr) function fitpack_polar_c_ref_m(this) &
        bind(C, name='fitpack_polar_c_ref_m')
        type(fitpack_polar_c), intent(in) :: this
        type(fitpack_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_polar_c_ref_m = c_loc(fthis%m)
        else
            fitpack_polar_c_ref_m = c_null_ptr
        end if
    end function fitpack_polar_c_ref_m

    !> Get pointer to scalar property 'lwrk2'
    type(c_ptr) function fitpack_polar_c_ref_lwrk2(this) &
        bind(C, name='fitpack_polar_c_ref_lwrk2')
        type(fitpack_polar_c), intent(in) :: this
        type(fitpack_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_polar_c_ref_lwrk2 = c_loc(fthis%lwrk2)
        else
            fitpack_polar_c_ref_lwrk2 = c_null_ptr
        end if
    end function fitpack_polar_c_ref_lwrk2

    !> Get pointer to scalar property 'bc_continuity_origin'
    type(c_ptr) function fitpack_polar_c_ref_bc_continuity_origin(this) &
        bind(C, name='fitpack_polar_c_ref_bc_continuity_origin')
        type(fitpack_polar_c), intent(in) :: this
        type(fitpack_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_polar_c_ref_bc_continuity_origin = c_loc(fthis%bc_continuity_origin)
        else
            fitpack_polar_c_ref_bc_continuity_origin = c_null_ptr
        end if
    end function fitpack_polar_c_ref_bc_continuity_origin

    !> Get pointer to scalar property 'bc_boundary'
    type(c_ptr) function fitpack_polar_c_ref_bc_boundary(this) &
        bind(C, name='fitpack_polar_c_ref_bc_boundary')
        type(fitpack_polar_c), intent(in) :: this
        type(fitpack_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_polar_c_ref_bc_boundary = c_loc(fthis%bc_boundary)
        else
            fitpack_polar_c_ref_bc_boundary = c_null_ptr
        end if
    end function fitpack_polar_c_ref_bc_boundary

    !> Get pointer to scalar property 'nmax'
    type(c_ptr) function fitpack_polar_c_ref_nmax(this) &
        bind(C, name='fitpack_polar_c_ref_nmax')
        type(fitpack_polar_c), intent(in) :: this
        type(fitpack_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_polar_c_ref_nmax = c_loc(fthis%nmax)
        else
            fitpack_polar_c_ref_nmax = c_null_ptr
        end if
    end function fitpack_polar_c_ref_nmax

end module fitpack_polar_domains_c
